fix: Changed the .adviser-only class to work on either the li or a tags
.adviser-only now works on either li or a tags in the sidebar. This was to get around an epi bug where the class needed to be on the li

--- a/libs/modules/adviser.less
+++ b/libs/modules/adviser.less
@@ -35,7 +35,8 @@ span[id*="overlay_button"] {
     }
 }
 
-.adviser-only {
+li.adviser-only a,
+a.adviser-only {
     padding-right: 2.7rem !important;
     //border-right: 4px solid @inventive-teal;
     //background-color: lighten(@inventive-teal-lightest, 7%);
