Dev: Add initial local Citizens Advice search results page

--- a/libs/jade/dev/site/locator.jade
+++ b/libs/jade/dev/site/locator.jade
@@ -13,8 +13,9 @@ block script
 
 block content
 	label Enter your postcode or town name to find a Citizens advice near you, or #[a(href="#") use your devices location].
-	.field-group.field-group--buttons
-		input#field(type="search", placeholder="Enter your town name or postcode")
-		button.btn
-			i.icon-search
+	.search
+		.field-group.field-group--buttons
+			input#field(type="search", placeholder="Enter your town name or postcode")
+			button.btn
+				i.icon-search
 	p Find local Citizens Advice in #[a(href="#") Northern Ireland].
