--- a/libs/site.less
+++ b/libs/site.less
@@ -65,7 +65,7 @@
 @import "modules/side-links";
 @import "modules/side-chat";
 @import "modules/calls-for-evidence";
-//@import "modules/search-results";
+@import "modules/search-results";
 @import "modules/cookie-monster";
 @import "modules/paragraph-numbers.less";
 //@import "modules/atoz";
