--- a/libs/modules/search-results.less
+++ b/libs/modules/search-results.less
@@ -7,9 +7,64 @@
 
 
 .search-results {
-    list-style: none;
     padding: 0;
+    > li {
+        list-style: none;
+        margin: 0;
+        padding: 1rem 0;
+        border-bottom: @gray-7 1px solid;
+        .heading {
+            font-size: @font-size-medium;
+            font-weight: @font-weight-bold;
+            margin-bottom: 1/1.2*.25em;
+        }
+        .description {
+            margin: .5rem 0;
+        }
+        .section {
+            padding: 0;
+            margin: 0;
+            white-space: nowrap;
+            overflow: ellipsis;
+            li {
+                overflow: ellipsis;
+                list-style: none;
+                display: inline;
+                padding: 0;
+                font-size: @font-size-small;
+                &:after {
+                    .icon;
+                    content: "\00a0\f105";
+                    padding: 0 .25em;
+                    color: @gray-4;
+                }
+                &:last-child:after {
+                    content: "";
+                }
+                a {
+                    color: @green;
+                    border: none;
+                }
+            }
+        }
+    }
+    .adviser-result {
+        .heading a:before {
+            content: "A";
+            float: left;
+            display: inline-block;
+            background-color: @inventive-teal;
+            color: @white;
+            width: 1.7em;
+            text-align: center;
+            margin-right: .25em;
+            font-weight: @font-weight-base;
+            border-radius: 2px;
+        }
+    }
 }
+
+// the old stuff
 .search-results__item {
     margin: @box-spacing-horizontal 0;
 }
