--- a/libs/jade/dev/site/search.jade
+++ b/libs/jade/dev/site/search.jade
@@ -1,6 +1,7 @@
 block settings
 	- var title = "Search results"
 	- var dir = "../../"
+	- var sidebar = true
 
 extends /template/template-site.jade
 
@@ -12,6 +13,31 @@ block breadcrumbs
 block script
 
 block content
-	.flex-container.flex-row
-		.col-sm-8.col-xs-12
-			
+	ul.search-results
+		li
+			.heading
+				a Benefits
+			.description These pages give you information on benefits and tax credits if you are working or unemployed, sick or disabled, a parent, a young person, an older person or a veteran.
+
+		li
+			.heading
+				a Sick or disabled people and carers
+			.description If you're sick or disabled, you may be able to claim benefits and tax credits.
+			ul.section
+				li #[a Benefits]
+
+		li
+			.heading
+				a Employment and Support Allowance (ESA)
+			.description Information on how to claim Employment and Support Allowance including eligibility, filling in the ESA1 and ESA50 forms and challenging an ESA decision.
+			ul.section
+				li #[a Benefits]
+				li #[a Sick or disabled people and carers]
+
+		li.adviser-result
+			.heading
+				a Contractual sick pay
+			.description If an employer has their own sick pay scheme it should be included in your client’s employment contract.
+			ul.section
+				li #[a Workplace rights]
+				li #[a Sick pay]
