--- a/libs/modules/search-results.less
+++ b/libs/modules/search-results.less
@@ -12,7 +12,7 @@
         list-style: none;
         margin: 0;
         padding: 1rem 0;
-        border-bottom: @gray-7 1px solid;
+        border-top: @gray-7 1px solid;
         .heading {
             font-size: @font-size-medium;
             font-weight: @font-weight-bold;
