add: update links for mockup journey and also minor change to stop top nav wrapping on mobile devices

--- a/libs/jade/dev/site/group.jade
+++ b/libs/jade/dev/site/group.jade
@@ -37,7 +37,7 @@ block content
 							h3 #[a(href="#") Benefit calculator]
 							p Find out what benefits and how much you could be entitled to
 						.group-index-list
-							h3 #[a(href="#") Personal Independence Payment (PIP)]
+							h3 #[a(href="topic.html") Personal Independence Payment (PIP)]
 						.group-index-list
 							h3 #[a(href="#") Employment Support Allowance (ESA)]
 						.group-index-list
