--- a/libs/modules/home.less
+++ b/libs/modules/home.less
@@ -10,6 +10,7 @@
 
 .home-second {
     background-color: @white;
+    margin-top: 1em;
 }
 
 .home__content {
@@ -82,5 +83,5 @@
     margin-bottom: 0;
 }
 .home--feature {
-    margin-bottom: -1.85rem;
+    margin-bottom: -1.4rem;
 }
