--- a/libs/template/template-v3.jade
+++ b/libs/template/template-v3.jade
@@ -82,7 +82,7 @@ html
 				.content
 					ul
 						li
-							a(href="") Benefits
+							a(href="group.html") Benefits
 							br
 							| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 						li
@@ -125,7 +125,7 @@ html
 							a(href="") Education
 							br
 							| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-						li
+						//li
 							a(href="") More from us
 							br
 							| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
