--- a/libs/modules/main-nav-beta.less
+++ b/libs/modules/main-nav-beta.less
@@ -17,6 +17,9 @@
             	display: inline-block;
             	margin: 0;
             	margin-left: 1em;
+                @media screen and (max-width: @breakpoint-sm) {
+                    margin-left: .5em;
+                }
             	a {
             		color: @white;
             		border: none;
@@ -26,6 +29,7 @@
 					&:focus,
 					&:active {
 						background: none;
+
 					}
             	}
             }
