--- a/libs/modules/adviser.less
+++ b/libs/modules/adviser.less
@@ -25,7 +25,7 @@ span[id*="overlay_button"] {
         @callout-border: @inventive-teal-light
     );
     .callout--border--left;
-    .callout--icon("Adviser only content");
+    .callout--icon("Adviser-only content");
     &:before {
         color: @white;
     }
