fix: Fixed the way 'Find a specific benefit' looks, but still uses hacky code
Fixed the way the dropdown looks and the spacing, however it's still using blog classes and inline CSS. We will need to fix this once we've finalised the style.

--- a/libs/jade/dev/site/group.jade
+++ b/libs/jade/dev/site/group.jade
@@ -50,24 +50,20 @@ block content
 							h3 #[a(href="#") Children and young people]
 						.group-index-list
 							h3 #[a(href="#") Coming from abroad and claiming benefits]
-	
 
-					div.col-sm-4.col-sm-12								
-						.blog-sidebar--updates(style="background-color:#c2bdde; height:100%;")
-							.card-banner-top
-								p(style="color:#57486b;") Find a specific benefit
-							.card-text
-								//img(src="../../images/sample-blog/mugs-purple.svg" alt="volunteer" style="width:80%;")
-								//p(style="color:#333;") Join one of over 300 local Citizens Advice, get training and help people.
-								.dropdown
-									select#exampleSelect1
-										option Attendance Allowance
-										option 2
-										option 3
-										option 4
-										option 5
 
-								button.btn.btn-secondary.right-button-icon Search 
+					div.col-sm-4.col-sm-12
+						.blog-sidebar--category(style="background-color:#c2bdde; height:100%;margin-top: 1.25rem;")
+							h2(style="color:#57486b;") Find a specific benefit
+							.dropdown
+								select#exampleSelect1
+									option Attendance Allowance
+									option 2
+									option 3
+									option 4
+									option 5
+
+							button.btn.btn-secondary.right-button-icon Search
 
 
 						//.blog-sidebar--updates(style="background-color:#006278; height:100%;")
@@ -88,7 +84,7 @@ block content
 							p.data-display-intro Benefits
 							h3 52%
 							p of ESA applicants were wrongly placed in mandatory consideration in 2015
-							p #[a(href="#") Read more about our research ]		
+							p #[a(href="#") Read more about our research ]
 
 						.callout--related
 							h3 If you need more help
