fix: Some minor comma mistakes

--- a/libs/jade/dev/site/locator.jade
+++ b/libs/jade/dev/site/locator.jade
@@ -22,10 +22,10 @@ block content
 					button.btn Find&nbsp;&nbsp;
 						i.icon-search
 			p Did you mean&nbsp;
-				#[a Bromley, London],&nbsp;
-				#[a Bramley, Hants],&nbsp;
-				#[a Bramley, Leeds],&nbsp;
-				#[a Bromley, Bridgnorth]?
+				| #[a Bromley, London],&nbsp;
+				| #[a Bramley, Hants],&nbsp;
+				| #[a Bramley, Leeds],&nbsp;
+				| #[a Bromley, Bridgnorth]?
 
 			ul.search-results
 				li
