fix: Added display:inline-block to fix column alignment issues

--- a/libs/modules/main-nav-beta.less
+++ b/libs/modules/main-nav-beta.less
@@ -224,6 +224,7 @@
             li {
                 break-inside: avoid-column;
                 margin-bottom: 1rem;
+                display: inline-block;
                 a {
                     font-weight: bold;
                 }
