change: Added new link content
Added the new content beneath each navigation item under 'Get Advice' and removed the content under 'Get Involved' links

--- a/libs/template/template-site.jade
+++ b/libs/template/template-site.jade
@@ -90,103 +90,75 @@ html.no-js
 					li
 						a(href="") Benefits
 						br
-						| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+						| Benefit eligibility and calculators. Applying and problems with applications.
 					li
 						a(href="") Work
 						br
-						| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+						| Rights at work, workplace discrimination, self-employment, rules and regulations of work.
 					li
 						a(href="") Debt and money
 						br
-						| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+						| Dealing with debts and arrears, budgeting, mortgages and pension services.
 					li
 						a(href="") Consumer
 						br
-						| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+						| The law and your rights when purchasing goods and services.
 					li
 						a(href="") Relationship
 						br
-						| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+						| Marriage, divorce, partnerships and looking after people. Births, deaths and wills.
 					li
 						a(href="") Housing
 						br
-						| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+						| Renting or buying a house, tenancy agreements and your rights as a homeowner or tenant.
 					li
 						a(href="") Law and rights
 						br
-						| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+						| Legal and civil rights, policing, the prison system and witness services.
 					li
 						a(href="") Discrimination
 						br
-						| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+						| Types of discrimination, steps to take if you have been discriminated against.
 					li
 						a(href="") Tax
 						br
-						| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+						| Taxable income, payments, refunds and problems. Council, pensioners and inheritance tax.
 					li
 						a(href="") Healthcare
 						br
-						| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+						| Help with NHS and dental. Private, alternative and armed forces healthcare.
 					li
 						a(href="") Education
 						br
-						| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-					li
-						a(href="") More from us
-						br
-						| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+						| School and higher education, support for learning, discrimination and financial advice.
 
 		#main-nav-beta--involved
 			.content
 				ul
 					li
 						a(href="") About Citizens Advice
-						br
-						| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 					li
 						a(href="") Contact us
-						br
-						| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 					li
 						a(href="") Policy research
-						br
-						| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 					li
 						a(href="") Our blogs
-						br
-						| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 					li
 						a(href="") Campaigns
-						br
-						| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 					li
 						a(href="") How Citizens Advice works
-						br
-						| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 					li
 						a(href="") Volunteer
-						br
-						| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 					li
 						a(href="") Jobs
-						br
-						| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 					li
 						a(href="") Press releases
-						br
-						| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 					li
 						a(href="") Support us
-						br
-						| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 					li
 						a(href="") The difference we make
-						br
-						| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 					li
 						a(href="") Find your local Citizens Advice
-						br
-						| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 
 		.main-container
 			nav.main-breadcrumb
