fix: Fixed width issue caused by inline-block
Fixed by adding width:100%;

--- a/libs/modules/main-nav-beta.less
+++ b/libs/modules/main-nav-beta.less
@@ -225,6 +225,7 @@
                 break-inside: avoid-column;
                 margin-bottom: 1rem;
                 display: inline-block;
+                width: 100%;
                 a {
                     font-weight: bold;
                 }
