--- a/libs/jade/dev/site/topic.jade
+++ b/libs/jade/dev/site/topic.jade
@@ -8,7 +8,8 @@ extends /template/template-site.jade
 block breadcrumbs
 	+breadcrumbs([
 		{title: "Home", href: dir + "index.html"},
-		{title: "Benefits"}])
+		{title: "Benefits"},
+		{title: "Personal Independence Payment"}])
 
 block content
 	.fullwidth-content
