--- a/libs/template/template-site.jade
+++ b/libs/template/template-site.jade
@@ -88,7 +88,7 @@ html.no-js
 			.content
 				ul
 					li
-						a(href="") Benefits
+						a(href="group.html") Benefits
 						br
 						| Benefit eligibility and calculators. Applying and problems with applications.
 					li
