add: update homepage content and layout reduce size of svg on home-first remove trending box and increase fonts

--- a/libs/jade/dev/site/home.jade
+++ b/libs/jade/dev/site/home.jade
@@ -14,7 +14,7 @@ block content
 					.col-md-6.col-sm-12
 						h1 Welcome to Citizens Advice
 						p We provide free, independent, confidential and impartial advice to everyone on their rights and responsibilities. We value diversity, promote equality and challenge discrimination.
-						.home__content-trends
+						//.home__content-trends
 							h2 Most viewed 
 							p #[a(href="#") Employment Support Allowance ]
 							p #[a(href="#") Personal Independence Payment ]
