--- a/libs/modules/home.less
+++ b/libs/modules/home.less
@@ -6,6 +6,18 @@
 
 .home-first {
     background-color: @heritage-yellow-lighter;
+    h1 {
+        font-size: 3.3rem;
+        @media (max-width: @screen-xs-max ) {
+            font-size: 2.3rem;
+        }
+    }
+    p {
+        font-size: @font-size-medium;
+        @media (max-width: @screen-xs-max ) {
+            font-size: @font-size-base;
+        }
+    }
 }
 
 .home-second {
