--- a/libs/base/forms.less
+++ b/libs/base/forms.less
@@ -157,7 +157,7 @@ select {
     width: 100%;
     padding: @box-spacing-vertical @box-spacing-horizontal;
     border-radius: @form-border-radius;
-    &:required:invalid {
+    /*&:required:invalid {
         //outline: 2px solid @red;
         border-color: @red;
         border-radius: 0;
@@ -167,7 +167,7 @@ select {
         background-position: center right .6em;
         -webkit-background-size: 1.5em 1.5em;
         background-size: 1.5em 1.5em;
-    }
+    }*/
     &.invalid {
         border-color: @red;
         border-radius: 0;
