--- a/libs/modules/main-nav-beta.less
+++ b/libs/modules/main-nav-beta.less
@@ -13,12 +13,15 @@
         ul {
             list-style: none;
             margin: 0;
+            @media screen and (max-width: @breakpoint-sm) {
+                padding: 0;
+            }
             li {
             	display: inline-block;
             	margin: 0;
             	margin-left: 1em;
                 @media screen and (max-width: @breakpoint-sm) {
-                    margin-left: .5em;
+                    margin-left: .25em;
                 }
             	a {
             		color: @white;
@@ -31,6 +34,11 @@
 						background: none;
 
 					}
+                    @media screen and (max-width: @breakpoint-sm) {
+                        margin-left: .25em;
+                        margin-right: 0;
+                        font-size: 0.75rem;
+                    }
             	}
             }
         }
