add: Created epitemplates.less where we can create all the in-between styles for the merge

--- a/libs/site.less
+++ b/libs/site.less
@@ -85,6 +85,7 @@
 @import "modules/cards";
 @import "modules/blog";
 @import "modules/financial-statement";
+@import "modules/epitemplates";
 
 // Styles for new site styles
 @import "modules/main-nav-v1";
