change: Tweaking colours

--- a/libs/modules/epitemplates.less
+++ b/libs/modules/epitemplates.less
@@ -1,10 +1,10 @@
 .index-page__box {
 	.callout(
-		@white,
+		@heritage-blue-lightest,
 		@heritage-blue,
-		@callout-border: @gray-6
+		@callout-border: @heritage-blue-lighter
 	);
-	.callout--border;
+	//.callout--border;
     .callout--border--top;
     padding: @box-spacing-vertical @box-spacing-horizontal;
     border-radius: 2px;
