change: Style changes to the benefits page styles

--- a/libs/modules/epitemplates.less
+++ b/libs/modules/epitemplates.less
@@ -1,11 +1,11 @@
 .index-page__box {
 	.callout(
-		@heritage-blue-lightest,
+		@white,
 		@heritage-blue,
-		@callout-border: @heritage-blue-lighter
+		@callout-border: @gray-6
 	);
-	//.callout--border;
-    .callout--border--top;
+	.callout--border;
+    //.callout--border--top;
     padding: @box-spacing-vertical @box-spacing-horizontal;
     border-radius: 2px;
     & >:first-child {
