--- a/libs/jade/dev/site/benefits.jade
+++ b/libs/jade/dev/site/benefits.jade
@@ -9,7 +9,7 @@ block breadcrumbs
 	+breadcrumbs([
 		{title: "Home", href: dir + "index.html"},
 		{title: "Modules", href: dir + "index.html#Modules"},
-		{title: "Volunteering with the Citizens Advice network"}])
+		{title: title}])
 
 block content
 	.index-page.flex-row.js-equal-height
