--- a/libs/jade/dev/maternity.jade
+++ b/libs/jade/dev/maternity.jade
@@ -16,7 +16,7 @@ block breadcrumbs
 block content
 	.articleContent
 		div
-			h2 Maternity pay entitlement
+			h2 Statutory maternity pay rights
 			.well--outline
 				p Use this to find out what dates you would need to have been working for your employer to be eligible for maternity pay.
 				.form-group-date
@@ -36,11 +36,9 @@ block content
 				a.btn.right-button-icon(href="#") Submit
 
 			.well--outline
-				h3 Your results
-				p To get statutory maternity pay you'll need to have started working for your employer on or before
-				p 5 January 2016
-				p and still be working for them on
-				p 5 March 2016
+				p You'll need to have started working on or before #[strong 5 January 2016]
+					br
+					| and still be working for them on #[strong 5 March 2016]
 
 
 				a.btn-secondary.restart-button-icon(href="#") Restart
