--- a/libs/jade/dev/maternity.jade
+++ b/libs/jade/dev/maternity.jade
@@ -36,6 +36,26 @@ block content
 				a.btn.right-button-icon(href="#") Submit
 
 			.well--outline
+				p Use this to find out what dates you would need to have been working for your employer to be eligible for maternity pay.
+				.form-group-date
+					legend What date is your baby due?
+					fieldset
+						label(for="dob-day")
+							span.screenreader What date is your baby due,
+							| Day
+						input.invalid#dob-day(max="31", min="1", placeholder="DD", type="number")
+					fieldset
+						label(for="dob-month") Month
+						input.invalid#dob-month(max="12", min="1", placeholder="MM", type="number")
+					fieldset
+						label(for="dob-year") Year
+						input.invalid#dob-year(max="2100", placeholder="YYYY", type="number")
+					.invalid
+						p Please enter a valid date
+
+				a.btn.right-button-icon(href="#") Submit
+
+			.well--outline
 				p You'll need to have started working on or before #[strong 5 January 2016]
 					br
 					| and still be working for them on #[strong 5 March 2016]
