fix: field group and button position in chrome and firefox

--- a/libs/jade/dev/maternity.jade
+++ b/libs/jade/dev/maternity.jade
@@ -18,7 +18,7 @@ block content
 		div
 			h2 Statutory maternity pay rights
 			.well--outline
-				p Use this to find out what dates you would need to have been working for your employer to be eligible for maternity pay.
+				//p Use this to find out what dates you would need to have been working for your employer to be eligible for maternity pay.
 				.form-group-date
 					legend What date is your baby due?
 					fieldset
@@ -36,7 +36,7 @@ block content
 				a.btn.right-button-icon(href="#") Submit
 
 			.well--outline
-				p Use this to find out what dates you would need to have been working for your employer to be eligible for maternity pay.
+				//p Use this to find out what dates you would need to have been working for your employer to be eligible for maternity pay.
 				.form-group-date
 					legend What date is your baby due?
 					fieldset
