--- a/libs/jade/dev/site/migration/benefits.jade
+++ b/libs/jade/dev/site/migration/benefits.jade
@@ -1,7 +1,7 @@
 block settings
 	- var title = "Benefits"
 	//- var fullpage = true
-	- var dir = "../../"
+	- var dir = "../../../"
 
 extends /template/template-site.jade
 
@@ -12,7 +12,9 @@ block breadcrumbs
 		{title: title}])
 
 block content
+	// New code snippet
 	.index-page.flex-row.js-equal-height
+		// New code snippet
 		.col-md-8
 			p It's important to make sure that you get all the help that you're entitled to. These pages give you information on benefits and tax credits if you are working or unemployed, sick or disabled, a parent, a young person, an older person or a veteran. There is also information about council tax and housing costs, national insurance, payment of benefits and problems with benefits.
 	.index-page.flex-row.js-equal-height
