--- a/libs/jade/dev/site/migration/jobs.jade
+++ b/libs/jade/dev/site/migration/jobs.jade
@@ -1,7 +1,7 @@
 block settings
-	- var title = "Jobs"
+	- var title = ""
 	//- var fullpage = true
-	- var dir = "../../"
+	- var dir = "../../../"
 
 extends /template/template-site.jade
 
