--- a/libs/base/forms.less
+++ b/libs/base/forms.less
@@ -528,20 +528,38 @@ input[class*="dob-"] {
 .field-group--buttons {
     input:first-of-type {
         border-radius: @form-border-radius 0 0 @form-border-radius;
-        width: 70%;
+        width: 100%;
         display: inline-block;
+        padding-right: 30%;
+    }
+    input::-moz-focus-inner { 
+        border: 0; 
+        padding: 0; 
+        margin-top:-2px; 
+        margin-bottom: -2px; 
     }
     button {
         width: 30%;
         display: inline-block;
+        margin-left: -30%;
         border-width: 2px;
+        border-radius: 0;
         &:focus {
             outline: 0;
             border: 2px solid @heritage-yellow;
             border-radius: 0;
         }
+        &::-moz-focus-inner { 
+            border: 0; 
+            padding: 0; 
+            margin-top:0px; 
+            margin-bottom:0px; 
+        }
         &:hover {
             border-width: 2px;
+            //-webkit-box-shadow:inset 0px 0px 0px 2px @heritage-yellow;
+            //-moz-box-shadow:inset 0px 0px 0px 2px @heritage-yellow;
+            //box-shadow:inset 0px 0px 0px 2px @heritage-yellow;
         }
     }
 }
