fix: ie specific fix for form-field--group buttons

--- a/libs/base/forms.less
+++ b/libs/base/forms.less
@@ -430,7 +430,8 @@ input[class*="dob-"] {
         display: inline-block;
     }
     button {
-        .ie(padding,0 1em);
+        .ie(border-width,1px);
+        .ie(padding-bottom,.6em);
         display: inline-block;
     }
     *:first-child {
