fix: Stopped line breaks in sharebar links
Added whitespace:nowrap to links inside the sharebar, to prevent them breaking over two lines

--- a/libs/modules/main-content.less
+++ b/libs/modules/main-content.less
@@ -27,6 +27,7 @@
         border-bottom: transparent;
         margin-right: 1rem;
         padding: 0.25rem;
+        white-space: nowrap;
         &:hover,
         &:focus {
             color: @link-hover-color;
