add: Created class for copy link in sharebar

--- a/libs/base/icons.less
+++ b/libs/base/icons.less
@@ -169,6 +169,12 @@
     &:extend(.a-social);
     border: 0;
 }
+.a-social-copy:before {
+    content: @i-copy;
+    color: @blue-light;
+    &:extend(.a-social);
+    border: 0;
+}
 
 .a-social-top {
     .icon;
