--- a/libs/jade/modules/toolbar.jade
+++ b/libs/jade/modules/toolbar.jade
@@ -1,8 +1,9 @@
 block settings
 	- var title = "Content toolbar"
 	- var sidebar = true
-	- var toolbars = true
-	- var sharebar = true
+	//- var toolbars = true
+	//- var toolbarsadviser = true
+	//- var sharebar = true
 	- var dir = "../"
 
 extends /template/template.jade
@@ -18,4 +19,46 @@ block sidebar
 
 block content
 	.articleContent
-		p Toolbars sandwich the content with functional icons.
+		.example-box-plain
+			.title__subheading
+				| This advice is for
+				button#showSimpleModal.btn-secondary.btn-small(type="button")
+					span.screenreader This advice is for
+					| England
+				button.toolbar-button.a-social-print(href="javascript:window.print();", data-track="Print") Print
+				button.toolbar-button.a-social-references(href="#!", data-track="References") References
+				span.info-extent Extent
+				span.info-reviewed Reviewed
+				span.info-owner Owner
+			p Toolbars sandwich the content with functional icons.
+			.title__subheading--footer
+				p Share this page. #[a(#) Find out more about sharing.]
+				a.a-social-twitter(href="https://twitter.com/share?url=", data-track="Twitter", rel="external") Twitter
+				a.a-social-facebook(href="https://www.facebook.com/sharer/sharer.php?u=", data-track="Facebook", rel="external") Facebook
+				//a.a-social-google-plus(href="https://plus.google.com/share?url=", data-track="Google+", rel="external") Google Plus
+				a.a-social-whatsapp.show-mobile(href="javascript:window.location='whatsapp://send?text='+encodeURIComponent(location.href);") Whatsapp
+				//button.toolbar-button.a-social-email(href="javascript:emailCurrentPage()", data-track="Email page") Email
+				a.a-social-email(href="javascript:emailCurrentPage()", data-track="Email page") Email
+				a.a-social-copy Copy link
+		pre
+			code.language-html
+				| &lt;div class="example-box-plain"&gt;
+				|     &lt;div class="title__subheading"&gt;
+				|         This advice is for &lt;button class="btn-secondary btn-small" id="showSimpleModal" type="button"&gt;
+				|         &lt;span class="screenreader"&gt;This advice is for&lt;/span&gt;England&lt;/button&gt;
+				|         &lt;button class="toolbar-button a-social-print" data-track="Print" href="javascript:window.print();"&gt;Print&lt;/button&gt;
+				|         &lt;button class="toolbar-button a-social-references" data-track="References" href="#!"&gt;References&lt;/button&gt;
+				|         &lt;span class="info-extent"&gt;Extent&lt;/span&gt;
+				|         &lt;span class="info-reviewed"&gt;Reviewed&lt;/span&gt;
+				|         &lt;span class="info-owner"&gt;Owner&lt;/span&gt;
+				|     &lt;/div&gt;
+				|     &lt;p&gt;Toolbars sandwich the content with functional icons.&lt;/p&gt;
+				|     &lt;div class="title__subheading--footer"&gt;
+				|         &lt;p&gt;Share this page. &lt;a&gt;Find out more about sharing.&lt;/a&gt;&lt;/p&gt;
+				|         &lt;a class="a-social-twitter" data-track="Twitter" href="https://twitter.com/share?url=" rel="external"&gt;Twitter&lt;/a&gt;
+				|         &lt;a class="a-social-facebook" data-track="Facebook" href="https://www.facebook.com/sharer/sharer.php?u=" rel="external"&gt;Facebook&lt;/a&gt;
+				|         &lt;a class="a-social-whatsapp show-mobile" href="javascript:window.location='whatsapp://send?text='+encodeURIComponent(location.href);"&gt;Whatsapp&lt;/a&gt;
+				|         &lt;a class="a-social-email" data-track="Email page" href="javascript:emailCurrentPage()"&gt;Email&lt;/a&gt;
+				|         &lt;a class="a-social-copy"&gt;Copy link&lt;/a&gt;
+				|     &lt;/div&gt;
+				| &lt;/div&gt;
