--- a/libs/modules/main-nav-beta.less
+++ b/libs/modules/main-nav-beta.less
@@ -156,7 +156,7 @@
         }
         .search {
 			vertical-align: top;
-			margin: .75rem 0;
+			margin: .25rem 0;
 			float: right;
 			display: none;
 			@media screen and (min-width: @breakpoint-md) {
@@ -169,12 +169,12 @@
 				padding-bottom: .3rem;
 			}
 			input:focus {
-				border-color: @heritage-yellow;
+				border-color: @heritage-blue-light;
 			}
 	        button {
 	        	background-color: @heritage-yellow;
 	        	border-color: @white;
-	        	margin: 0;
+	        	//margin: 0;
 				&:focus {
 					border-color: @heritage-blue-light;
 				}
@@ -205,7 +205,7 @@
     button {
     	background-color: @heritage-yellow;
     	border-color: @white;
-    	margin: 0;
+    	//margin: 0;
 		&:focus {
 			border-color: @heritage-blue-light;
 		}
