fix: Fixed alignment of search button and field in IE
This was a hacky fixed that involved IE specific padding to make sure their heights matched

--- a/libs/modules/main-nav-beta.less
+++ b/libs/modules/main-nav-beta.less
@@ -176,6 +176,7 @@
 	        button {
 	        	background-color: @heritage-yellow;
 	        	border-color: @white;
+                .ie(padding-bottom,.45em);
 				&:focus {
 					border-color: @heritage-blue-light;
 				}
@@ -199,6 +200,8 @@
 		border-color: @white;
 		padding-top: .5rem;
 		padding-bottom: .5rem;
+                .ie(border-width,1px);
+                .ie(padding-bottom,.6em);
 	}
 	input:focus {
 		border-color: @heritage-yellow;
@@ -206,6 +209,7 @@
     button {
     	background-color: @heritage-yellow;
     	border-color: @white;
+                .ie(padding-bottom,.425em);
     	//margin: 0;
 		&:focus {
 			border-color: @heritage-blue-light;
