--- a/libs/jade/forms/validation.jade
+++ b/libs/jade/forms/validation.jade
@@ -27,7 +27,7 @@ block content
     .articleContent
         p Form validation is an important part of guiding a users journey through entry fields. Most field types have an error style, making it clear to the user which fields are incorrect and why.
         p Form pages should include an error box at the top of the form with anchor links to the incorrect form fields. Each field should then have its own error text beneath it that explains the problem.
-        p When a user corrects the field it should remove the red outline. This can be seen by correcting the Email input below. The CSS supports both HTML5 and Javascript validation. To show validation with a class (rather than HTML5), toggle the #[code.code .invalid] class on the form element.
+        p When a user corrects the field it should remove the red outline. This can be seen by correcting the Email input below. The CSS only supports Javascript validation. To show validation with a class (rather than HTML5), toggle the #[code.code .invalid] class on the form element.
         .example-box-plain
             .well--outline.invalid
                 h3 Please correct the errors
@@ -49,20 +49,20 @@ block content
                 legend Date
                 fieldset
                     label(for="dob-day")
-                        span.screenreader Date,
+                        span.screenreader When did you buy your car? Date field,
                         | Day
-                    input.invalid#dob-day(max="31", min="1", placeholder="DD", type="number")
+                    input.invalid#dob-day(placeholder="DD", maxlength="2", min="1", max="31",  name="day", type="number", pattern="\d{1,2}", autoComplete="off")
                 fieldset
                     label(for="dob-month") Month
-                    input.invalid#dob-month(max="12", min="1", placeholder="MM", type="number")
+                    input.invalid#dob-month(placeholder="MM", maxlength="2", min="1", max="12", name="month", type="number", pattern="\d{1,2}", autoComplete="off")
                 fieldset
                     label(for="dob-year") Year
-                    input.invalid#dob-year(max="2100", placeholder="YYYY", type="number")
+                    input.invalid#dob-year(placeholder="YYYY", maxlength="4",  min="1900", max="2100", name="year", type="number", pattern="\d{4}", autoComplete="off")
                 .invalid Please enter a date.
 
             fieldset#email-fieldset
                 label(for="email") Email
-                input#email(placeholder="", type="email", value="email!domain.com", required)
+                input.invalid#email(placeholder="", type="email", value="email!domain.com", required)
                 .invalid Please enter a valid email format including the @ symbol.
 
             fieldset#phone-fieldset
@@ -124,15 +124,15 @@ block content
                 |         &lt;legend&gt;Date&lt;/legend&gt;
                 |         &lt;fieldset&gt;
                 |             &lt;label for="dob-day"&gt;&lt;span class="screenreader"&gt;Date,&lt;/span&gt;Day&lt;/label&gt;
-                |             &lt;input class="invalid" id="dob-day" max="31" min="1" placeholder="DD" type="number"&gt;
+                |             &lt;input class="invalid" id="dob-day" placeholder="DD" maxlength="2" min="1" max="31"  name="day" type="number" pattern="\d{1,2}" autoComplete="off"&gt;
                 |         &lt;/fieldset&gt;
                 |         &lt;fieldset&gt;
                 |             &lt;label for="dob-month"&gt;Month&lt;/label&gt;
-                |             &lt;input class="invalid" id="dob-month" max="12" min="1" placeholder="MM" type="number"&gt;
+                |             &lt;input class="invalid" id="dob-month" placeholder="MM" maxlength="2" min="1" max="12" name="month" type="number" pattern="\d{1,2}" autoComplete="off"&gt;
                 |         &lt;/fieldset&gt;
                 |         &lt;fieldset&gt;
                 |             &lt;label for="dob-year"&gt;Year&lt;/label&gt;
-                |             &lt;input class="invalid" id="dob-year" max="2100" placeholder="YYYY" type="number"&gt;
+                |             &lt;input class="invalid" id="dob-year" placeholder="YYYY" maxlength="4"  min="1900" max="2100" name="year" type="number" pattern="\d{4}" autoComplete="off"&gt;
                 |         &lt;/fieldset&gt;
                 |         &lt;div class="invalid"&gt;
                 |             Please enter a date.
