change: Removed the A from adviser revealables and added 'Adviser' to the top of the revealable content
Nobody understood the A.

--- a/libs/modules/adviser.less
+++ b/libs/modules/adviser.less
@@ -92,19 +92,12 @@ a.adviser-only {
         @border: @inventive-teal-light;
         @icon: @inventive-teal-light;
     );
-        border-width: 1px 1px 0px 0.5rem;
-    .collapse-toggle:before,
-    .revealable__heading:before {
-        content: "A";
-        float: left;
-        display: inline-block;
-        background-color: @inventive-teal;
-        color: @white;
-        width: 1.7rem;
-        text-align: center;
-        margin-right: .5rem;
-        font-weight: @font-weight-base;
-        //font-weight: @font-weight-bolder;
-        border-radius: 2px;
+    border-width: 1px 1px 0px 0.5rem;
+    .revealable__content:before {
+        content: "Adviser";
+        display: block;
+        color: @inventive-teal;
+        font-weight: @font-weight-bolder;
+        margin-bottom: .75rem;
     }
 }
