fix: update fieldset to include .fieldset class adjust templates to use div fieldset class on single fields and fieldset group on grouped field elements of forms

--- a/libs/base/forms.less
+++ b/libs/base/forms.less
@@ -39,7 +39,7 @@ span.invalid {
     }
 }
 
-fieldset,
+fieldset, .fieldset,
 .form__group {
     padding: 0;
     margin: 0;
@@ -671,7 +671,7 @@ input[class*="dob-"] {
 }
 
 .conditional--content {
-    fieldset {
+    fieldset, .fieldset {
         label {
             font-weight: @font-weight-bold;
             padding: @box-spacing-vertical 0 @box-spacing-vertical*.5 0;
