add: update field.jade content

--- a/libs/jade/forms/fields.jade
+++ b/libs/jade/forms/fields.jade
@@ -24,6 +24,9 @@ block content
 			h3 Examples of form components
 			p Use a field for a person’s full name if possible - different cultures structure names in different ways so Firstname, Surname isn't always appropriate.
 
+			h3 Structure
+			p For single fields use a #[span.code div] with the class #[span.code fieldset], this is a better syntax for building simpler tools and forms with a single question per page. When creating tools with multiple questions or fields, for example date or address fields.
+
 			.example-box-plain
 				.fieldset
 					label(for="standardField") Standard field
