--- a/libs/modules/section-notice.less
+++ b/libs/modules/section-notice.less
@@ -82,9 +82,6 @@
             background-color: @heritage-yellow;
         }
     }
-    @media( max-width: @screen-xs-max ) {
-        display: none;
-    }
 }
 
 @media (max-width: @max-page-width-before-the-share-bar-ruins-it-all) and (min-width: @screen-sm-min) {
@@ -103,3 +100,8 @@
     }
 }
 
+@media( max-width: @screen-xs-max ) {
+    *[class^="section-notice"] {
+        display: none;
+    }
+}
