fix: remove margin-bottom 0 from last-of-type in radio input --block Because each radio is a last of type the margin is collapsing the form fields

--- a/libs/base/forms.less
+++ b/libs/base/forms.less
@@ -322,9 +322,9 @@ textarea.form__field {
                 font-weight: @font-weight-bold;
             }
         }
-        label&:last-of-type {
-            margin-bottom: 0;
-        }
+        //label&:last-of-type {
+            //margin-bottom: 0;
+        //}
     }
 }
 
