add: copy to clipboard new function

--- a/libs/base/forms.less
+++ b/libs/base/forms.less
@@ -103,7 +103,9 @@ input[type=checkbox] + label {
 input[type=text][size="1"] {
     width: 3em;
 }
-
+input[readonly] {
+    background-color: @gray-7;
+}
 
 select {
     max-width: 100%;
