add: Added a second sidebar mixin for creating AO sidebars, that have the .adviser-nav class
This mixin is almost exactly the same as the other sidebar mixin, just with a slightly different output. The syntax is the same in jade

--- a/libs/template/mixins.jade
+++ b/libs/template/mixins.jade
@@ -24,3 +24,15 @@ mixin sidebar(obj, key)
 					- each item,index in obj
 						li
 							+link(item.title, item.href, item.text, item.css)
+
+mixin adviser-sidebar(obj, key)
+	nav.section-nav.adviser-nav
+		h2.section-nav__heading
+			a Adviser pages in this section
+		ul
+			li
+				a.section-nav__parent(href="../##{section}") Adviser #{section}
+				ul
+					- each item,index in obj
+						li
+							+link(item.title, item.href, item.text, item.css)
