change: Removed adviser only sidebar link styles and added holding brackets for .adviser-nav
The A in the sidebar was a fail in testing, so the styles have been taken out

--- a/libs/modules/adviser.less
+++ b/libs/modules/adviser.less
@@ -35,8 +35,8 @@ span[id*="overlay_button"] {
     }
 }
 
-li.adviser-only a,
-a.adviser-only {
+/*li.adviser-only a,
+a.adviser-only { // Styles for adding A icon to sidebar links
     padding-right: 2.7rem !important;
     //border-right: 4px solid @inventive-teal;
     //background-color: lighten(@inventive-teal-lightest, 7%);
@@ -63,8 +63,11 @@ a.adviser-only {
         background-color: @inventive-teal;
         color: @white;
     }
-}
+}*/
 
+.adviser-nav { // Styles for adviser specific sidebar block
+
+}
 
 .adviser-nav {
     .side-nav-beta__sibling {
