--- a/libs/template/sidebar-adviser.jade
+++ b/libs/template/sidebar-adviser.jade
@@ -3,6 +3,5 @@
 	{href: "entitled-to-sick-pay.html", title: "Check if you're entitled to sick pay"},
 	{href: "how-to-get-sick-pay.html", title: "How to get sick pay"},
 	{href: "getting-money-when-youre-off-sick.html", title: "Getting money when you're off work sick"},
-	{href: "sick-pay-when-youre-pregnant.html", title: "Getting sick pay when you're pregnant"},
-	{href: "contractual-sick-pay.html", title: "Contractual sick pay", css: "adviser-only"}
+	{href: "sick-pay-when-youre-pregnant.html", title: "Getting sick pay when you're pregnant"}
 ])
