--- a/libs/jade/dev/site/topic.jade
+++ b/libs/jade/dev/site/topic.jade
@@ -52,7 +52,7 @@ block content
 					p #[a(href="#") Letter to send evidence after your PIP claim form]
 
 			.col-md-4.col-sm-12
-				div.blog-sidebar--updates(style="background-color:#a6d6ae; height:100%;")
+				div.blog-sidebar--updates(style="background-color:#a6d6ae;")
 					.card-banner-top
 						p(style="color:#57486b;") Help others
 					.card-text
