--- a/libs/jade/dev/site/group.jade
+++ b/libs/jade/dev/site/group.jade
@@ -53,7 +53,7 @@ block content
 
 
 					div.col-sm-4.col-sm-12
-						.blog-sidebar--category(style="background-color:#c2bdde; height:100%;margin-top: 1.25rem;")
+						.blog-sidebar--category(style="background-color:#c2bdde; margin-top: 1.25rem;")
 							h2(style="color:#57486b;") Find a specific benefit
 							.dropdown
 								select#exampleSelect1
