dev: Created two new mixins specifically for adviser sidebar mockups, and used them in the sidebar
Creating the two new mixins made sure that other sidebar templates weren't touched, and I was able to create the optimal syntax

--- a/libs/template/mixins.jade
+++ b/libs/template/mixins.jade
@@ -25,14 +25,14 @@ mixin sidebar(obj, key)
 						li
 							+link(item.title, item.href, item.text, item.css)
 
-mixin adviser-sidebar(obj, key)
-	nav.section-nav.adviser-nav
-		h2.section-nav__heading
-			a Adviser pages in this section
-		ul
+mixin sidebar-inline(obj, key)
+	ul
+		- each item,index in obj
 			li
-				a.section-nav__parent(href="../##{section}") Adviser #{section}
-				ul
-					- each item,index in obj
-						li
-							+link(item.title, item.href, item.text, item.css)
+				+link(item.title, item.href, item.text, item.css)
+
+mixin sidebar-inline-adviser(obj, key)
+	ul
+		- each item,index in obj
+			li
+				+link(item.title, item.href, item.text, item.css)
