--- a/libs/template/sidebar-adviser.jade
+++ b/libs/template/sidebar-adviser.jade
@@ -12,7 +12,7 @@ nav.section-nav
 				{href: "sick-pay-when-youre-pregnant.html", title: "Getting sick pay when you're pregnant"},
 			])
 		li.adviser-nav
-			span.section-nav__parent Adviser #{section}
+			span.section-nav__parent #[span.badge Adviser] #{section}
 			+sidebar-inline-adviser([
-				{href: "contractual-sick-payb.html", title: "Contractual sick pay"}
+				{href: "contractual-sick-pay.html", title: "Contractual sick pay"}
 			])
